--- a/edit19/src/app/app.component.html
+++ b/edit19/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-stefan></app-stefan>
+<app-home></app-home>
 
 <router-outlet></router-outlet>
