--- a/edit19/src/app/stefan/stefan.component.css
+++ b/edit19/src/app/stefan/stefan.component.css
@@ -9,3 +9,12 @@
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
+
+body{
+  background-image: url('/home/ucenik/EditFrontend/edit19/src/app/kont.jpg');
+}
+
+#contact{
+  font-size: 12px;
+}
+
