--- a/edit19/src/app/stefan/stefan.component.html
+++ b/edit19/src/app/stefan/stefan.component.html
@@ -1,4 +1,5 @@
 
 <div class="footer">
+     <p id="contact">Tehnicka podrska: +387 51 210 103</p>
     <p> <img src=""> Supported by EDIT by Comtrade</p>
   </div>
