--- a/edit19/src/app/home/home.component.html
+++ b/edit19/src/app/home/home.component.html
@@ -1,53 +1,14 @@
 <html lang="en">
-
-<body class="view"
-    style="background-image: url('https://www.maritime-executive.com/media/images/article/Photos/Miscellaneous/Cropped/ship%20to%20rail%2016-9.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-
-    <header class="h">
-        <div>
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light align-items-center">
-                <!-- Content -->
-                <div class="container">
-                    <!--Grid row-->
-                    <div class="row">
-                        <!--Grid column-->
-                        <div class="img1">
-                            <img src="../../assets/logo.png" width="300px" height="130px" style="margin-top: 1.5cm;" />
-                        </div>
-                        <hr class="hr-light">
-                    </div>
-                </div>
-            </div>
+<body class="view">
+    <header class="container-xl">
+        <div class="responsive">
+            <img src="../../assets/logo.png" width="280px" height="130px" style="margin-top: 1.5cm;" />
         </div>
-
+        <hr class="hr-light">
     </header>
-    <!-- Main navigation -->
-    <!--Main Layout-->
-    <main>
-        <div class="container">
-            <app-searchbar></app-searchbar>
-            <!--Grid row-->
-            <div class="row py-5">
-                <!--Grid column-->
-                <div class="col-md-12 text-center">
-
-
-
-                </div>
-                <!--Grid column-->
-            </div>
-            <!--Grid row-->
-        </div>
-    </main>
-
-
+    <div class="container">
+        <app-searchbar></app-searchbar>
+    </div>
     <app-stefan></app-stefan>
 </body>
-
 </html>
-
-
-
-
-<app-stefan></app-stefan>
