--- a/edit19/src/app/searchbar/searchbar.component.css
+++ b/edit19/src/app/searchbar/searchbar.component.css
@@ -2,13 +2,23 @@
 
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Display:400,400i&display=swap');
 
-
   table th{
     background: #1c2024ef;
     color: white;
     font-size: 1.2rem;
     font-family: 'DM Serif Display', serif;
     
+  }
+  .search-container{
+    margin-bottom: 15px;
+    margin-top:15px;
+  }
+  table{
+    
+    border-radius: 5px;
+    width: 100%;
+    margin: 0px auto;
+    float: none;
   }
   table tbody tr:hover {
     background-color:#13326b;
@@ -23,5 +33,4 @@
    color: white;
    background: #343a40bd;
    font-weight: bold;
-   
  }
