--- a/edit19/src/app/searchbar/searchbar.component.html
+++ b/edit19/src/app/searchbar/searchbar.component.html
@@ -5,28 +5,20 @@
   </form>
 </div>
 
-
-
-
-<!-- dodala iz tutorijala -->
-<div class="container">
-
-
-  <table class="table">
+<div class="table-responsive-xl">
+  <table class="table table-striped table-hover ">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Time</th>
-        <th>Parking ID</th>
-        <th>Health Status</th>
-        <th>Fullness</th>
+        <th >ID</th>
+        <th >Time</th>
+        <th >Health Status</th>
+        <th >Fullness</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor='let o of information'>
-        <td>{{o.ID}}</td>
-        <td>{{o.Time}}</td>
-        <td>{{o.ParkingID}}</td>
+        <td >{{o.ID}}</td>
+        <td>{{o.Time}}</td>      
         <td>{{o.HealthStatus}}</td>
         <td>{{o.Fullness}}</td>
       </tr>
