--- a/edit19/src/app/stefan/stefan.component.css
+++ b/edit19/src/app/stefan/stefan.component.css
@@ -3,11 +3,14 @@
     position: fixed;
     left: 0;
     bottom: 0;
+    height: 9%;
     width: 100%;
-   
-    color: black;
+   background-color: #1F2F37;
+    opacity: 0.9;
+    color: white;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans';
+    
   }
 
 body{
@@ -15,6 +18,7 @@ body{
 }
 
 #contact{
+  
   font-size: 12px;
 }
 
