--- a/edit19/src/app/home/home.component.css
+++ b/edit19/src/app/home/home.component.css
@@ -1,23 +1,15 @@
-html,
-body,
-.view {
-  height: 100%;
-  width: 100%;
-}
+
 .view{
-  background-image: url('https://www.maritime-executive.com/media/images/article/Photos/Miscellaneous/Cropped/ship%20to%20rail%2016-9.jpg');  
+  background-image: url('https://www.gospodarkamorska.pl/_upload/articles2/62126/img/kontenery_kolejowe.jpg');  
   background-repeat: no-repeat; background-size: cover; background-position: center center;
+  background-attachment: fixed;
 }
-header{
-height: 2%;
-}
+
 .responsive{
-  margin-left: auto;
-  margin-right: auto;
+
   opacity: 0.9;
   max-width: 100%;
   height: auto;
-  overflow: scroll;
   text-align:center;
 }
 .container
