--- a/edit19/src/app/home/home.component.html
+++ b/edit19/src/app/home/home.component.html
@@ -1,8 +1,7 @@
-<html lang="en">
-<body class="view">
+<div class="view">
     <header class="container-xl">
         <div class="responsive">
-            <img src="../../assets/logo.png" width="280px" height="130px" style="margin-top: 1.5cm;" />
+            <img src="../../assets/logo.png" width="25%" height="15%" style="margin-top: 1.5%;" />
         </div>
         <hr class="hr-light">
     </header>
@@ -10,5 +9,5 @@
         <app-searchbar></app-searchbar>
     </div>
     <app-stefan></app-stefan>
-</body>
-</html>
+ </div>
+    
