--- a/edit19/src/app/stefan/stefan.component.html
+++ b/edit19/src/app/stefan/stefan.component.html
@@ -1,6 +1,6 @@
 
 <div class="footer" >
   
-     <p id="contact"><strong>Tehnical support: +387 51 210 103</strong></p>
-    <p> <strong>EDIT19 supported by <a href="https://www.comtrade.com/">Comtrade</a></strong></p>
+     <p id="contact"><strong>Technical support: +387 51 210 103</strong></p>
+    <p id="sup"> <strong>EDIT19 supported by <a href="https://www.comtrade.com/">Comtrade</a></strong></p>
   </div>
