--- a/edit19/src/app/stefan/stefan.component.css
+++ b/edit19/src/app/stefan/stefan.component.css
@@ -1,24 +1,20 @@
 
 .footer {
     position: fixed;
-    left: 0;
     bottom: 0;
-    height: 9%;
+    height: auto;
     width: 100%;
    background-color: #1F2F37;
     opacity: 0.9;
     color: white;
     text-align: center;
     font-family: 'Lucida Sans';
-    
   }
-
-body{
-  background-image: url('/home/ucenik/EditFrontend/edit19/src/app/kont.jpg');
+#sup{
+  margin-top:-15px;
 }
-
 #contact{
-  
+  padding: 5px;
   font-size: 12px;
 }
 
