--- a/edit19/src/app/home/home.component.html
+++ b/edit19/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="view">
     <header class="container-xl">
         <div class="responsive">
-            <img src="../../assets/logo.png" width="25%" height="15%" style="margin-top: 1.5%;" />
+            <img src="../../assets/logo.png" width="18%" height="15%" style="margin-top: 1.5%;" />
         </div>
         <hr class="hr-light">
     </header>
     <div class="container">
         <app-searchbar></app-searchbar>
     </div>
-    <app-stefan></app-stefan>
+    <app-footer></app-footer>
  </div>
     
