--- a/edit19/src/app/searchbar/searchbar.component.css
+++ b/edit19/src/app/searchbar/searchbar.component.css
@@ -5,16 +5,14 @@
   table th{
     background: #1c2024ef;
     color: white;
-    font-size: 1.2rem;
-    font-family: 'DM Serif Display', serif;
-    
+    font-size: 1.2rem;    
   }
   .search-container{
     margin-bottom: 15px;
     margin-top:15px;
   }
   table{
-    
+    font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     width: 100%;
     margin: 0px auto;
