--- a/edit19/src/app/footer/footer.component.html
+++ b/edit19/src/app/footer/footer.component.html
@@ -3,6 +3,6 @@
   <footer >
     <div class="footer-copyright text-center py-3">
       <p id="contact"><strong>Technical support: +387 51 210 103</strong></p>
-      <p><strong>EDIT19 supported by<a href="https://www.comtrade.com/"> Comtrade</a></strong></p>
+      <p style="font-size:1.5em"><strong>EDIT19 supported by<a href="https://www.comtrade.com/"> Comtrade</a></strong></p>
     </div>
   </footer>
