--- a/edit19/src/app/searchbar/searchbar.component.css
+++ b/edit19/src/app/searchbar/searchbar.component.css
@@ -1,11 +1,15 @@
 /* Add a black background color to the top navigation bar */
 
 
-
+.ex{
+  width: 100%;
+  height: 47%;
+  overflow-y: scroll;
+}
   table th{
     background: #1c2024ef;
     color: white;
-    font-size: 1.2rem;    
+    font-size: 1.1em;    
   }
   .search-container{
     margin-bottom: 15px;
@@ -17,6 +21,7 @@
     width: 100%;
     margin: 0px auto;
     float: none;
+    font-size: 2.1em;
   }
   table tbody tr:hover {
     background-color:#13326b;
@@ -31,3 +36,7 @@
    background: #343a40bd;
    font-weight: bold;
  }
+#sb{
+  font-size:1em;
+  width:25%;
+}
