--- a/edit19/src/app/searchbar/searchbar.component.html
+++ b/edit19/src/app/searchbar/searchbar.component.html
@@ -1,11 +1,11 @@
 <div class="search-container">
   <form action="/action_page.php">
-    <input type="text" [(ngModel)]="ID" (input)="Search()" placeholder="Insert ID:" name="search" style="width:25%">
+    <input type="text" [(ngModel)]="ID" id="sb" (input)="Search()" placeholder="Insert ID:" name="search"  (ngModelChange)="Search()">
 
   </form>
 </div>
 
-<div class="table-responsive-xl">
+<div class="ex">
   <table class="table table-striped table-hover ">
     <thead>
       <tr>
